# system

./: .envrc  .gitignore  .pre-commit-config.yaml  .sops.yaml  Cargo.toml  README.md  book.toml  cude-env  cude-env-1-link  default-1-link  flake.nix  hive-flake-module.nix  main.nu  meta.yml  result  start.nu
.devenv/: profile
.github/: settings.yml
.github/workflows/: ci.yaml
.local/state/: last-action
cells/documentation/: packages.nix
cells/environment/configs/: adrgen.nix  conform.nix  default.nix  editorconfig.nix  githubsettings.nix  lefthook.nix  mdbook.nix  treefmt.nix
cells/environment/rust/: default.nix
cells/environment/shells/: default.nix
cells/experience/: packages.nix
cells/repository/: rust.nix
cells/repository/configs/: adrgen.nix  (+4 more)
clusters/k3d/: k3d.sh
configs/: ignore
configs/leftwm/: config.ron  up.sh
configs/nushell/: config.nu  env.nu  login.nu
nix/host/: colmenaConfigurations.nix  hardware-configuration.nix  homeConfigurations.nix  homeProfiles.nix  nixosConfigurations.nix  nixosProfiles.nix
nix/repo/: configs.nix  packages.nix  shells.nix
nix/site/: packages.nix
sources/browser-messaging/: Cargo.toml
sources/documentation/: Cargo.toml
sources/experience/: Cargo.toml
sources/experience/src/: main.rs
sources/processor/: Cargo.toml
src/app/: Cargo.toml
storage/db/: http%3a%2f%2fterminusdb.com%2fschema%2fref.label  http%3a%2f%2fterminusdb.com%2fschema%2frepository.label  http%3a%2f%2fterminusdb.com%2fschema%2fwoql.label  terminusdb%3a%2f%2f%2fsystem%2fdata.label  terminusdb%3a%2f%2f%2fsystem%2fschema.label
(+109 files in other folders)
