[package]
name = "experience"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
bevy = "0.11.0"
bevy-async-task = { git = "https://github.com/cognitive-singularity/bevy-async-task", version = "0.1.0" }
rand = "0.8.5"
